k8s/clusters/glug-infra/attic/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: attic
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
