k8s/clusters/glug-infra/attic/tailscale-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attic-tailscale
  namespace: attic
  labels:
    app.kubernetes.io/name: attic
    app.kubernetes.io/component: cache
    app.kubernetes.io/part-of: nix-infra
  annotations:
    tailscale.com/hostname: "attic"
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/name: attic
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
